--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
 
 <main>
-
-    <input id="input-feeling" placeholder="On a scale of 1-10 - How are you feeling?"></input>
+    <h1>Create a character!</h1>
+    <p>On a scale of 1-10, enter below...</p>
+    <input id="input-feeling" placeholder="How are you feeling?" />
+    <input id='input-energy' placeholder="What's your energy level?" />
     <button id="submit">Submit</button>
-    <img id="image-area" src=''></img>
-
+    <img id="image-area"></img>
+    <img id="image-area-2"></img>
 </main>
 
 <script type="module" src="./app.js"></script>
